[project]
name = "pygame-project"
version = "0.1.0"
description = ""
authors = [
    {name = "hallmark1984",email = "matt.mcaleavy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
